--- a/css/style.scss
+++ b/css/style.scss
@@ -123,7 +123,7 @@ nav {
 
             .nav__items-2 {
                 .nav__btns {
-                    gap: 44px;
+                    gap: 24px;
                     .nav__btns-icon {
                         padding-left: 20px;
                     }
@@ -164,7 +164,10 @@ nav {
                 .nav__btns {
                     gap: 16px;
                     .nav__btns-icon {
-                        padding-left: 0;
+                        padding-left: 5px;
+                    }
+                    button {
+                        padding: 17px 10px; 
                     }
                 }
             }
@@ -294,6 +297,7 @@ header {
                 }
 
                 .header__left-icons {
+                    flex-wrap: wrap;
                     gap: 8px;
                 }
 
@@ -636,6 +640,10 @@ main {
                                 margin-bottom: 30px;
                             }
 
+                            @media screen and (max-width: $mobileM) {
+                                padding-left: 0px;
+                            }
+
                             @media screen and (max-width: $mobileXS) {
                                 font-size: 14px;
                             }
@@ -776,6 +784,7 @@ main {
         .like__companies {
             margin-top: 120px;
             margin-bottom: 120px;
+            padding: 0px 20px;
             h2 {
                 @extend %titleSection;
                 margin: 0px auto;
